Prevent floated elements (such as avatars) from overflowing out of the session list box

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,9 +48,14 @@ ul > li {
 .session-list > div {
   position: relative;
   border: 1px solid #ccc;
-  min-height: 130px;
   padding: 10px;
   margin-bottom: 15px;
+}
+
+.session-list > div:after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
 .session-list .session-title {
